<resources>
    <string name="app_name">ToDoListMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <!-- PlaceHolders -->
    <string name="user_placeholder">Usuário</string>
    <string name="password_placeholder">Senha</string>

    <!-- PlaceHolders -->
    <string name="btn_login">Login</string>
    <string name="status_todo_text">Todo</string>
    <string name="default_card_title">Título do Card</string>
    <string name="default_card_description">Esta é uma descrição do card.</string>
    <string name="task_description_label">Descrição da Tarefa</string>
    <string name="task_description_placeholder">Digite a descrição da tarefa</string>
    <string name="task_title_placeholder">Digite o título da tarefa</string>
    <string name="task_title_label">Título da Tarefa</string>
    <string name="modal_add_task_title">Adicionar Tarefa</string>
    <string name="task_due_date_label">Data da Tarefa</string>
    <string name="task_due_date_placeholder">Selecione a data</string>
    <string name="cancel_btn">Cancelar</string>
    <string name="save_btn">SALVAR</string>
    <string name="task_status_label">Status:</string>
    <string name="task_default_badge">Todo</string>
    <string name="advance_status_btn">Avançar Status</string>
    <string name="delete_btn">Excluir</string>

</resources>