<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Título da Modal -->
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modal_add_task_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <!-- Campo Título da Tarefa -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_title_label"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/dialog_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title_placeholder"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <!-- Campo Descrição da Tarefa -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_description_label"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/dialog_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description_placeholder"
            android:inputType="textMultiLine"
            android:layout_marginBottom="16dp"
            android:minHeight="80dp"/> <!-- Diminuindo a altura do campo de descrição -->

        <!-- Campo Data -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_due_date_label"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/dialog_input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_due_date_placeholder"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:layout_marginBottom="16dp"/>

        <!-- Botões de Ação -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn"
                android:textColor="#ffffff"
                android:background="#B00020"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_btn"
                android:textColor="#ffffff"
                android:background="#6200EE" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
