<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.taskDetail.TaskDetailFragment">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title_label"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_title_placeholder"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_description_label"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/taskTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_description_placeholder"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="4"/>

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_due_date_label"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/taskDescription"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/taskDueDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_due_date_placeholder"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/dueDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/statusLayout"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/taskDueDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_status_label"
            android:textSize="16sp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/statusBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_default_badge"
            android:textColor="#ffffff"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/status_todo"
        />

        <Button
            android:id="@+id/advanceStatusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance_status_btn"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/statusLayout"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/statusLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn"
            android:layout_marginStart="8dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
