<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Título do Card -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_card_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <!-- Badge de Status -->
            <TextView
                android:id="@+id/status_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/status_todo_text"
                android:textColor="@android:color/white"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:background="@drawable/status_todo"/>

        </LinearLayout>

        <!-- Descrição do Card -->
        <TextView
            android:id="@+id/card_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_card_description"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>